# ChartDraw

./: .gitignore  .pylintrc  A.bat  CHOICE.mas  IDENTITY.tie  MASTER.mas  Pipfile  README.md  TODO  app.py  aqDRAW.bas  aqTIE.bas  aq_draw.py  aq_functions.py  aq_tie.py  astrap.bat  drawings.py  main.py  pyproject.toml  qb_utils.py  read_astro.py  setup.cfg  switch.sw0  test_aq_functions.py  transform_canvas.py  treeview_panel.py  variables.txt  widgets.py
aqCHARTS/: table.json
aqCHARTS/aq_temp/: Astro-1.txt  Astro-2.txt  data.json
chartdraw/: app.py  read_astro.py
chartdraw/lib/: constants.py  drawings.py  optimizer.py  transform_canvas.py  utils.py  widgets.py
lib/: constants.py  drawings.py  optimizer.py  transform_canvas.py  utils.py  widgets.py
src/chartdraw/lib/: optimizer.py
test/: test_aq_functions.py  test_transform_canvas.py  test_utils.py
tests/: test_transform_canvas.py  test_utils.py
