[metadata]
name = ChartDraw
author = Jan-Petter Jønland
author_email = janpj@yandex.com
description = Astrological charts
version = 0.1
classifiers =
  Development Status :: 2 - Pre-Alpha

[options]
python_requires = >=3.4
install_requires =
  typing

[options.extras_require]
dev =
  autopep8
  flake8
  flake8-import-order
  mypy
  pytest

[options.entry_points]
gui_scripts =
  chartdraw = chartdraw.app:main

[flake8]
select = E
ignore = F
exclude = .vscode/
max-line-length = 88
application-import-names = chartdraw
import-order-style = google

[autopep8]
max-line-length = 88
