[metadata]
name = ChartDraw
author = Jan-Petter Jønland
author_email = janpj@yandex.com
description = Astrological charts
version = 0.1
classifiers =
  Development Status :: 2 - Pre-Alpha

[options]
python_requires = >=3.5

[options.extras_require]
dev =
  flake8
  flake8-bugbear
  flake8-import-order
  mypy
  pytest

[options.entry_points]
gui_scripts =
  chartdraw = chartdraw.app:main

[flake8]
application-import-names = chartdraw
exclude = .vscode/
ignore =
  E203  # whitespace before ‘:’
  E266  # too many leading ‘#’ for block comment
  E501  # line too long (82 > 79 characters)
  W503  # line break before binary operator
import-order-style = google
max-complexity = 10
max-line-length = 80
select = B,C,E,F,W,T4,B9
